--- a/dream/index.html
+++ b/dream/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/style.css">
 
         <link href="add/chosen/chosen.css" rel="stylesheet">
+        <link href="add/bxslider/jquery.bxslider.css" rel="stylesheet">
 
 
         <!--[if lt IE 9]>
@@ -19,7 +20,7 @@
     </head>
     <body>
 
-        <div class="header-container">
+        <!--<div class="header-container">-->
             <header class="header wrapper clearfix">
                 <div class="brand block">
                     <h1>Dreams<span>Start</span></h1>
@@ -36,16 +37,263 @@
                     <input type="text" autocomplete />
                 </div>
             </header>
-        </div>
-        <div class="slider-container">
-        </div>
+        <!--</div>-->
 
-        <div class="main-container">
+        <!--<div class="slider-container">-->
+            <div class="slider clearfix">
+                <div class="slider-viewport">
+                    <div class="bxslider">
+                        <section>
+                            <header>
+                                <h2>С нами Вы сможите воплощать свои мечты и помочь воплотить другим!</h2>
+                                <button>Начать действовать</button>
+                            </header>
+                            <img src="img/slide_2.jpg" alt="" />
+                        </section>
+                        <section>
+                            <header>
+                                <h2>С нами Вы сможите воплощать свои мечты и помочь воплотить другим!</h2>
+                                <button>Начать действовать</button>
+                            </header>
+                            <img src="img/slide_1.jpg" alt="" />
+                        </section>
+                    </div>
+                    <div class="time-indicator"></div>
+                </div>
+            </div>
+        <!--</div>-->
+
+        <!--<div class="main-container">-->
             <div class="main wrapper clearfix">
-
-
+            <section class="true-dreams">
+                <header class="clearfix">
+                    <h2>Мечты начавшие своё финансирование</h2>
+                    <a href="#">Смотреть все</a>
+                </header>
+                <div class="dreams clearfix">
+                    <article>
+                        <a href="#">
+                        <div class="about">
+                            <div class="img">
+                                <img src="img/dream_img.jpg" alt="" />
+                            </div>
+                            <div class="text">
+                                <h4>Музыкальная группа</h4>
+                                <p class="user">Василий Пупкин, 27 лет</p>
+                                <p class="location">Хабаровск, Россия</p>
+                                <p class="dream">Мечтаю о создании своей музыкальной груупы.</p>
+                            </div>
+                        </div>
+                        <div class="needs clearfix">
+                            <div class="left">
+                                <div class="inner-norm">
+                                    <div class="inner-green"><div class="indicator"></div></div>
+                                    <div class="outer"><span>67%</span></div>
+                                </div>
+                            </div>
+                            <div class="right">
+                                <p>Требуется</p>
+                                <h3>50 000 руб.</h3>
+                                <p>Собрано 67%</p>
+                                <p>33 500 руб.</p>
+                            </div>
+                        </div>
+                        </a>
+                    </article>
+                    <article>
+                        <a href="#">
+                        <div class="about">
+                            <div class="img">
+                                <img src="img/dream_img.jpg" alt="" />
+                            </div>
+                            <div class="text">
+                                <h4>Музыкальная группа</h4>
+                                <p class="user">Василий Пупкин, 27 лет</p>
+                                <p class="location">Хабаровск, Россия</p>
+                                <p class="dream">Мечтаю о создании своей музыкальной груупы.</p>
+                            </div>
+                        </div>
+                        <div class="needs clearfix">
+                            <div class="left">
+                                <div class="inner-norm">
+                                    <div class="inner-green"><div class="indicator"></div></div>
+                                    <div class="outer"><span>67%</span></div>
+                                </div>
+                            </div>
+                            <div class="right">
+                                <p>Требуется</p>
+                                <h3>50 000 руб.</h3>
+                                <p>Собрано 67%</p>
+                                <p>33 500 руб.</p>
+                            </div>
+                        </div>
+                            </a>
+                    </article>
+                    <article>
+                        <a href="#">
+                        <div class="about">
+                            <div class="img">
+                                <img src="img/dream_img.jpg" alt="" />
+                            </div>
+                            <div class="text">
+                                <h4>Музыкальная группа</h4>
+                                <p class="user">Василий Пупкин, 27 лет</p>
+                                <p class="location">Хабаровск, Россия</p>
+                                <p class="dream">Мечтаю о создании своей музыкальной груупы.</p>
+                            </div>
+                        </div>
+                        <div class="needs clearfix">
+                            <div class="left">
+                                <div class="inner-norm">
+                                    <div class="inner-green"><div class="indicator"></div></div>
+                                    <div class="outer"><span>67%</span></div>
+                                </div>
+                            </div>
+                            <div class="right">
+                                <p>Требуется</p>
+                                <h3>50 000 руб.</h3>
+                                <p>Собрано 67%</p>
+                                <p>33 500 руб.</p>
+                            </div>
+                        </div>
+                            </a>
+                    </article>
+                    <article>
+                        <a href="#">
+                        <div class="about">
+                            <div class="img">
+                                <img src="img/dream_img.jpg" alt="" />
+                            </div>
+                            <div class="text">
+                                <h4>Музыкальная группа</h4>
+                                <p class="user">Василий Пупкин, 27 лет</p>
+                                <p class="location">Хабаровск, Россия</p>
+                                <p class="dream">Мечтаю о создании своей музыкальной груупы.</p>
+                            </div>
+                        </div>
+                        <div class="needs clearfix">
+                            <div class="left">
+                                <div class="inner-norm">
+                                    <div class="inner-green"><div class="indicator"></div></div>
+                                    <div class="outer"><span>67%</span></div>
+                                </div>
+                            </div>
+                            <div class="right">
+                                <p>Требуется</p>
+                                <h3>50 000 руб.</h3>
+                                <p>Собрано 67%</p>
+                                <p>33 500 руб.</p>
+                            </div>
+                        </div>
+                            </a>
+                    </article>
+                </div>
+            </section>
+            <section class="doit">
+                <h1>Мечтай! Действуй! Воплощай!</h1>
+                <div class="row clearfix">
+                    <div class="cell">
+                        <div class="img">
+                            <a href="#">
+                                <img class="normal" src="img/menu_img01.jpg" alt="" />
+                                <img class="hovered" src="img/menu_img01_hovered.jpg" alt="" />
+                                <span class="h2">Как мы работаем</span>
+                            </a>
+                        </div>
+                        <div class="hover">
+                            <a href="#">
+                                <span class="h2">Мечты</span>
+                                <span>Уже мечт: 10 000&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Финансируются: 8 000</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cell">
+                        <div class="img">
+                            <a href="#">
+                                <img class="normal" src="img/menu_img02.jpg" alt="" />
+                                <img class="hovered" src="img/menu_img02_hovered.jpg" alt="" />
+                                <span class="h2">Голосование</span>
+                            </a>
+                        </div>
+                        <div class="hover">
+                            <a href="#">
+                                <span class="h2">Мечты</span>
+                                <span>Уже мечт: 10 000&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Финансируются: 8 000</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row clearfix">
+                    <div class="cell">
+                        <div class="img">
+                            <a href="#">
+                                <img class="normal" src="img/menu_img03.jpg" alt="" />
+                                <img class="hovered" src="img/menu_img03_hovered.jpg" alt="" />
+                                <span class="h2">Мечта</span>
+                            </a>
+                        </div>
+                        <div class="hover">
+                            <a href="#">
+                                <span class="h2">Мечты</span>
+                                <p>Тут Вы сможите увидеть мечты других людей и даже помочь реализовать их</p>
+                                <span>Уже мечт: 10 000&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Финансируются: 8 000</span>
+                                <h4>Воплощено: 1500</h4>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cell">
+                        <div class="img">
+                            <a href="#">
+                                <img class="normal" src="img/menu_img04.jpg" alt="" />
+                                <img class="hovered" src="img/menu_img04_hovered.jpg" alt="" />
+                                <span class="h2">Воплощение мечты</span>
+                            </a>
+                        </div>
+                        <div class="hover">
+                            <a href="#">
+                                <span class="h2">Мечты</span>
+                                <p>Тут Вы сможите увидеть мечты других людей и даже помочь реализовать их</p>
+                                <span>Уже мечт: 10 000&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Финансируются: 8 000</span>
+                                <h4>Воплощено: 1500</h4>
+                            </a>
+                        </div>
+                        </div>
+                    </div>
+                <div class="row clearfix">
+                    <div class="cell">
+                        <div class="img">
+                            <a href="#">
+                                <img class="normal" src="img/menu_img05.jpg" alt="" />
+                                <img class="hovered" src="img/menu_img05_hovered.jpg" alt="" />
+                                <span class="h2">Новости</span>
+                            </a>
+                        </div>
+                        <div class="hover">
+                            <a href="#">
+                                <span class="h2">Мечты</span>
+                                <span>Уже мечт: 10 000&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Финансируются: 8 000</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cell">
+                        <div class="img">
+                            <a href="#">
+                                <img class="normal" src="img/menu_img06.jpg" alt="" />
+                                <img class="hovered" src="img/menu_img06_hovered.jpg" alt="" />
+                                <span class="h2">Исполнение мечты</span>
+                            </a>
+                        </div>
+                        <div class="hover">
+                            <a href="#">
+                                <span class="h2">Мечты</span>
+                                <span>Уже мечт: 10 000&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Финансируются: 8 000</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
             </div> <!-- #main -->
-        </div> <!-- #main-container -->
+        <!--</div> -->
 
         <div class="footer-container">
             <footer class="wrapper footer">
@@ -74,6 +322,7 @@
                             <h3>Подписаться на Dayli Inspiration</h3>
                             <input type="text" autocomplete placeholder="Your email address"/>
                             <a href="#">Зарегистрироваться</a>
+                            <div class="clearfix"></div>
                             <em>Частный, безопастный, без спама</em>
                         </div>
                     </div>
@@ -146,6 +395,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
 
         <script src="add/chosen/chosen.jquery.min.js"></script>
+        <script src="add/bxslider/jquery.bxslider.min.js"></script>
 
         <script src="js/main.js"></script>
     </body>
