Dream: user menu (header) + some regular page added

--- a/dream/index.html
+++ b/dream/index.html
@@ -28,7 +28,24 @@
                 <div class="user block">
                     <a href="#">Почта</a>
                     <a href="#"><img src="img/user_img.jpg" /></a>
-                    <a href="#">я</a>
+                    <div class="personal">
+                        <span>я</span>
+                    <select>
+                        <optgroup label=" ">
+                            <option value="1">Сообщения</option>
+                            <option value="2">Профиль</option>
+                            <option value="3">История</option>
+                            <option value="4">Избранные</option>
+                        </optgroup>
+                    <optgroup label="Ваш счёт">
+                        <option value="5">1402 руб.</option>
+                    </optgroup>
+                    <optgroup label=" ">
+                        <option value="6">Вы зашли как <strong>Игорь Дыль</strong></option>
+                        <option value="7">Выйти</option>
+                    </optgroup>
+                    </select>
+                    </div>
                 </div>
                 <div class="contry block">
                     <span>rus</span>
