--- a/dream/index.html
+++ b/dream/index.html
@@ -218,28 +218,7 @@
                             </div>
                             <div class="needs clearfix">
                                 <div class="left">
-                                    <!--<div class="inner-norm">-->
-                                    <!--<div class="inner-green"><div class="indicator"></div></div>-->
-                                    <!--<div class="outer"><span>67%</span></div>-->
-                                    <!--</div>-->
-
-                                    <!--<div class="radial-progress" data-progress="0">-->
-                                        <!--<div class="circle">-->
-                                            <!--<div class="mask full">-->
-                                                <!--<div class="fill"></div>-->
-                                            <!--</div>-->
-                                            <!--<div class="mask half">-->
-                                                <!--<div class="fill"></div>-->
-                                                <!--<div class="fill fix"></div>-->
-                                            <!--</div>-->
-                                            <!--<div class="shadow"></div>-->
-                                        <!--</div>-->
-                                        <!--<div class="inset">-->
-                                            <!--<div class="percentage">67%</div>-->
-                                        <!--</div>-->
-                                    <!--</div>-->
-
-                                    <div class="radial-progress">
+                                    <div data-to="67" class="radial-progress">
                                         <div class="percentage">67%</div>
                                     </div>
                                 </div>
@@ -267,7 +246,7 @@
                             </div>
                             <div class="needs clearfix">
                                 <div class="left">
-                                    <div class="radial-progress">
+                                    <div data-to="67" class="radial-progress">
                                         <div class="percentage">67%</div>
                                     </div>
                                 </div>
@@ -295,7 +274,7 @@
                             </div>
                             <div class="needs clearfix">
                                 <div class="left">
-                                    <div class="radial-progress">
+                                    <div data-to="67" class="radial-progress">
                                         <div class="percentage">67%</div>
                                     </div>
                                 </div>
@@ -323,7 +302,7 @@
                             </div>
                             <div class="needs clearfix">
                                 <div class="left">
-                                    <div class="radial-progress">
+                                    <div data-to="67" class="radial-progress">
                                         <div class="percentage">67%</div>
                                     </div>
                                 </div>
